Fixed bug with jumping icon + modified logic when closing the comment field

--- a/src/styles/components/PriorityNumber.scss
+++ b/src/styles/components/PriorityNumber.scss
@@ -3,8 +3,7 @@
 
 .h5p-order-priority-number {
 
-  align-items: center;
-  display: flex;
+  margin-top: 1rem;
 
   div {
     border-radius: 50%;
